[gd_scene load_steps=4 format=3 uid="uid://bokx7wb2tjgmx"]

[ext_resource type="Script" path="res://scenes/ui/game_over_screen.gd" id="1_j8uag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oplbw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8lsro"]
bg_color = Color(0.054902, 0.0392157, 0.180392, 1)

[node name="GameOverScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_oplbw")
script = ExtResource("1_j8uag")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8lsro")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="GrowthProgressLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
horizontal_alignment = 1

[node name="EnemiesKilledLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Made by "

[node name="ZavenLink" type="LinkButton" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 1, 0.980392, 1)
theme_override_font_sizes/font_size = 8
text = "Zaven"

[node name="Label4" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = ", "

[node name="AldenLink" type="LinkButton" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 1, 0.980392, 1)
theme_override_font_sizes/font_size = 8
text = "Alden"

[node name="Label6" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = ", and "

[node name="LeviLink" type="LinkButton" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 1, 0.980392, 1)
theme_override_font_sizes/font_size = 8
text = "Levi"

[node name="Label8" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "."

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 9
text = "Play again"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/ZavenLink" to="." method="_on_zaven_link_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/AldenLink" to="." method="_on_alden_link_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/LeviLink" to="." method="_on_levi_link_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
